--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,7 @@
+# HTTP server
 server {
     listen 80;
-    server_name localhost;
+    server_name 123fblive.com www.123fblive.com;
 
     location / {
         proxy_pass http://web:8000;
@@ -42,9 +43,10 @@ server {
     error_log /var/log/nginx/error.log;
 }
 
+# HTTPS server
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name 123fblive.com www.123fblive.com;
 
     ssl_certificate /etc/letsencrypt/live/localhost/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/localhost/privkey.pem;
