--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,17 +1,32 @@
-# /nginx/nginx.conf
+# nginx.conf
 
-# Main Nginx configuration file
-events {}
+# Global Settings
+user nginx;
+worker_processes auto;
+pid /var/run/nginx.pid;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    
+    # Logging Settings
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+    
+    # SSL Settings
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
-    # Logging configuration
-    access_log  /var/log/nginx/access.log;
-    error_log   /var/log/nginx/error.log;
+    # gzip Settings
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # HTTP server configuration
+    # Server Blocks
     server {
         listen 80;
         server_name 123fblive.com www.123fblive.com;
@@ -48,12 +63,8 @@ http {
         add_header X-Content-Type-Options nosniff;
         add_header X-Frame-Options SAMEORIGIN;
         add_header X-XSS-Protection "1; mode=block";
-
-        gzip on;
-        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     }
 
-    # HTTPS server configuration
     server {
         listen 443 ssl;
         server_name 123fblive.com www.123fblive.com;
@@ -93,8 +104,5 @@ http {
         add_header X-Content-Type-Options nosniff;
         add_header X-Frame-Options SAMEORIGIN;
         add_header X-XSS-Protection "1; mode=block";
-
-        gzip on;
-        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     }
 }
