--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,92 +1,128 @@
-# HTTP server
-server {
-    listen 80;
-    server_name 123fblive.com www.123fblive.com;
+# nginx.conf or included file structure
 
-    location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+# Global settings
+user nginx;
+worker_processes auto;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location /static/ {
-        alias /home/app/web/staticfiles/;
-        expires 30d;
-        access_log off;
-    }
-
-    location /media/ {
-        alias /opt/app/media/;
-        expires 30d;
-        access_log off;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-XSS-Protection "1; mode=block";
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+# Events section
+events {
+    worker_connections 1024;
 }
 
-# HTTPS server
-server {
-    listen 443 ssl;
-    server_name 123fblive.com www.123fblive.com;
+# HTTP section
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
 
-    ssl_certificate /etc/letsencrypt/live/www.123fblive.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/www.123fblive.com/privkey.pem;
+    # Logging settings
+    access_log  /var/log/nginx/access.log;
+    error_log   /var/log/nginx/error.log;
 
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    # HTTP server for port 80 (HTTP)
+    server {
+        listen 80;
+        server_name 123fblive.com www.123fblive.com;
 
-    location / {
-        proxy_pass http://web:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        location / {
+            proxy_pass http://localhost:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Let's Encrypt ACME challenge location
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        # Static files location
+        location /static/ {
+            alias /home/app/web/staticfiles/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Media files location
+        location /media/ {
+            alias /opt/app/media/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Error pages
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        # HTTP headers for security
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-XSS-Protection "1; mode=block";
+
+        # Gzip compression
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        # Access and error logs
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
     }
 
-    location /static/ {
-        alias /home/app/web/staticfiles/;
-        expires 30d;
-        access_log off;
+    # HTTPS server for port 443 (HTTPS)
+    server {
+        listen 443 ssl;
+        server_name 123fblive.com www.123fblive.com;
+
+        ssl_certificate /etc/letsencrypt/live/123fblive.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/123fblive.com/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+
+        location / {
+            proxy_pass http://localhost:8000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Static files location
+        location /static/ {
+            alias /home/app/web/staticfiles/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Media files location
+        location /media/ {
+            alias /opt/app/media/;
+            expires 30d;
+            access_log off;
+        }
+
+        # Error pages
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /usr/share/nginx/html;
+        }
+
+        # HTTP headers for security
+        add_header X-Content-Type-Options nosniff;
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-XSS-Protection "1; mode=block";
+
+        # Gzip compression
+        gzip on;
+        gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+
+        # Access and error logs
+        access_log /var/log/nginx/access.log;
+        error_log /var/log/nginx/error.log;
     }
 
-    location /media/ {
-        alias /opt/app/media/;
-        expires 30d;
-        access_log off;
-    }
-
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-XSS-Protection "1; mode=block";
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    # Additional configurations as needed
 }
