--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,15 +3,13 @@ server {
     server_name 123fblive.com www.123fblive.com;
 
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://web:8000;  # Replace with your application server's address
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
     }
 
     location /static/ {
@@ -24,6 +22,10 @@ server {
         alias /opt/app/media/;
         expires 30d;
         access_log off;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;  # Directory for Certbot challenges
     }
 
     error_page 500 502 503 504 /50x.html;
