--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,44 +2,11 @@ server {
     listen 80;
     server_name 123fblive.com www.123fblive.com;
 
-    location / {
-        proxy_pass http://web:8000;  # Replace with your application server's address
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Port $server_port;
-    }
-
-    location /static/ {
-        alias /home/app/web/staticfiles/;
-        expires 30d;
-        access_log off;
-    }
-
-    location /media/ {
-        alias /opt/app/media/;
-        expires 30d;
-        access_log off;
-    }
-
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;  # Directory for Certbot challenges
+        root /var/www/certbot;
     }
 
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
+    location / {
+        return 301 https://$host$request_uri;
     }
-
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options SAMEORIGIN;
-    add_header X-XSS-Protection "1; mode=block";
-
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
 }
